--- a/Python_Exercise_1.ipynb
+++ b/Python_Exercise_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Linear Algebra: Python Exercise 1",
       "provenance": [],
-      "authorship_tag": "ABX9TyPwbEIU1hdscnhHQyDGTGeh",
+      "authorship_tag": "ABX9TyMya1akvbfGKgeRGfaOK9nq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,17 +52,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qvltsh-F7wPk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qvltsh-F7wPk",
+        "outputId": "95ee82ad-efe9-4c20-fc48-7b921704af35"
       },
       "source": [
         "import numpy as np\n",
         "\n",
         "#Given\n",
         "A = np.array([[-5,0],[4,1]])\n",
-        "B = np.array([[6,-3],[2,3]])"
+        "B = np.array([[6,-3],[2,3]])\n",
+        "print(A)\n",
+        "print(B)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-5  0]\n",
+            " [ 4  1]]\n",
+            "[[ 6 -3]\n",
+            " [ 2  3]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
